--- a/style.css
+++ b/style.css
@@ -1,28 +1,39 @@
+.slider {
+  width: auto;
+  height: auto;
+  padding: 5px;
+  position: relative;
+  margin: auto;
+}
+.pictures {
+width: auto;
+}
+.prev, .next {
+  padding: 10px;
+  top: 45%;
+  width: auto;
+  position: absolute;
+  font-size: 35px;
+  text-decoration: none;
+  color: white;
 
-body {
-	display: inline;
+  cursor: pointer;
+  transition: 0.6s ease;
+}
+.next {
+  right: 5px;
 
 }
-.calc {
-background:#ff9800;
-width:400px;
-height:500px;
-border-radius: 5px;
-margin-top:20px;
-margin-left:30%;
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 2s;
+  animation-name: fade;
+  animation-duration: 2s;
 }
-.forma,.lab {
-	margin-left:10px;
+.prev:hover , .next:hover {
+  background-color: grey;
 }
-.forma {
-	width:70%;
-	height:35px;
-	margin-bottom:20px;
-
-}
-.line {
-   display: block;
-}
-.answer {
-  display: inline-block;
+@keyframes fade {
+  from{opacity: .4}
+  to{opacity: 1}
 }
